<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">V4VOTE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app">V4VOTE</string>
    <string name="name">Name</string>
    <string name="consti">Const.</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="name_text">Name</string>
    <string name="constituency_text">Constituency</string>
    <string name="Signup_text">Sign Up</string>
    <string name="age_text">Age</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="constituency_change_text">Constituency can only be changed 3 times in 6 month</string>

</resources>