<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFBF00"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="20dp"
        android:text="@string/Signup_text"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_title"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edge"
            android:hint="@string/name_text"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/signup_age"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edge"
            android:hint="@string/age_text"
            android:inputType="number"
            android:paddingLeft="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/gender_text"
                android:textColor="#000000"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/radiosex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/signup_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/male_text" />

                <RadioButton
                    android:id="@+id/signup_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/female_text" />
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/signup_constituency"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edge"
            android:hint="@string/constituency_text"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edge_signup"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/Signup_text"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>