<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="Name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/logintext" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_toRightOf="@id/tvName"
        android:textSize="@dimen/logintext" />

    <TextView
        android:id="@+id/tvConsti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName"
        android:layout_alignRight="@+id/tvName"
        android:layout_below="@id/tvName"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/consti"
        android:textColor="@android:color/black"
        android:textSize="@dimen/logintext" />

    <EditText
        android:id="@+id/etConsti"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/tvConsti"
        android:textSize="@dimen/logintext" />

    <TextView
        android:id="@+id/tvSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName"
        android:layout_alignRight="@+id/tvName"
        android:layout_below="@id/etConsti"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/sex"
        android:textColor="@android:color/black"
        android:textSize="@dimen/logintext" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConsti"
        android:layout_toRightOf="@id/tvSex" >

        <RadioButton
            android:id="@+id/rbSexM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="M"
            android:textSize="@dimen/logintext" />

        <RadioButton
            android:id="@+id/rbSexF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/rbSexM"
            android:text="F"
            android:textSize="@dimen/logintext" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName"
        android:layout_alignRight="@+id/tvName"
        android:layout_below="@id/tvSex"
        android:layout_marginTop="8dp"
        android:gravity="left|bottom"
        android:text="@string/age"
        android:textColor="@android:color/black"
        android:textSize="@dimen/logintext" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSex"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/tvAge"
        android:textSize="@dimen/logintext" />

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAge"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

</RelativeLayout>